renamed file extensions and changed order of portraits

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 .cover-background-image {
-  background-image: url("/img/background.jpg");
+  background-image: url("/img/background-img.jpg");
   background-position: center top;
 }
 
