--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -7,21 +7,35 @@
                     <h3 class="section-subheading text-muted">Click on each gallery to see more of my work.</h3>
                 </div>
             </div>
-            <div class="row">
-            {% for post in site.posts %}
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive" alt="">
+           <div class="row">
+            
+                <div class="col-sm-12 col-md-4">
+                    <a href="/portfolio">
+                        <h2>Urban Portraits</h2>
                     </a>
-                    <div class="portfolio-caption">
-                        <h4>{{ post.title }}</h4>
-                        <p class="text-muted">{{ post.subtitle }}</p>
-                    </div>
+                    <p class="label">Photography</p>
+                    <img src="/img/urban-portraits/Portraits_11.jpg" width="150px" height="112.5px" class="img-responsive">
+                    
+                </div>
+            
+                <div class="col-sm-12 col-md-4">
+                    <a href="/portfolio">
+                        <h2>Architecture & Landscapes</h2>
+                    </a>
+                    <p class="label">Photography</p>
+                    <img src="/img/urban-portaits/Portraits_10.jpg" width="150px" height="112.5px" class="img-responsive">
+                                   </div>
+            
+                <div class="col-sm-12 col-md-4">
+                    <a href="/portfolio">
+                        <h2>Still Life & Colors</h2>
+                    </a>
+                    <p class="label">Photography</p>
+                    <img src="/img/urban-portraits/Portraits_16.jpg" width="150px" height="112.5px" class="img-responsive">
+                </div>
+            
+            
+        </div>                    </div>
                 </div>
             {% endfor %}
             </div>
